<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Koala Topics</string>
    <string name="title_topic_detail">Topic Detail</string>
    <string name="title_activity_main">Koala Topics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Koala Topics</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="title_activity_topic_edit">Edit Topic</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="invalid_url">Invalid URL</string>
    <string name="title_activity_settings">Settings</string>
    <string name="instructions_reset_password">To reset password, enter your email, press the button and check mail to follow instruction.</string>
    <string name="hint_email">Email</string>
    <string name="button_reset_password">Reset Password</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_forgot_password">Forgot password</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="hint_re_enter_password">Re-enter Password</string>
    <string name="hint_topic_title">Title</string>
    <string name="button_save">Save</string>
    <string name="hint_topic_content">Content</string>
    <string name="description_koala_logo">Koala logo</string>
    <string name="description_drag_handle">TODO</string>
    <string name="message_email_is_empty">Enter your email address</string>
    <string name="message_check_email_for_password_reset">Check your email to complete the password reset</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="message_could_not_send_email_for_password_reset">The reset password email could not be sent</string>
    <string name="message_login_failed">Login failed</string>
    <string name="message_enter_valid_email_address">Enter a valid email address</string>
    <string name="message_password_length">Password must be between 4 and 10 alphanumeric characters</string>
    <string name="title_add_topic">Add Topic</string>
    <string name="title_topic">Title</string>

    <string name="message_contact_read_permission_granted">The app can now read your contact list</string>
    <string name="message_contact_read_permission_denied">The app can now read your contact list</string>
    <string name="title_contact_read_permission">Read contact list</string>
    <string name="message_contact_read_permission_requested">The app would like to be able to read your contact list in order to pre-fill the email address</string>
    <string name="button_contact_read_permission_requested_again">Request again</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_topic_add">Add Topic</string>
    <string name="message_topic_load_fail">Failed to load topic</string>
    <string name="message_topic_added">Topic "%1$s" added</string>
    <string name="title_topic_edit">Edit Topic</string>
    <string name="title_activity_topic_add">Add Topic</string>
    <string name="activity_users">Users</string>
    <string name="menu_topics">Topics</string>
    <string name="menu_users">Users</string>
    <string name="menu_sign_in">Sign In</string>
    <string name="menu_sign_up">Sign Up</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_animals">Animals</string>
    <string name="activity_animals">Animals</string>

    <string name="loading">Loading</string>
    <string name="language">Language: %s</string>
    <string name="search_hint">GitHub Repository</string>
    <string name="no_results">No results 😓</string>
    <string name="unknown">\?</string>
    <string name="activity_search_github">Search GitHub</string>
    <string name="menu_search_github">Search GitHub</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="activity_articles">Articles</string>
    <string name="activity_stocks">Stocks</string>

    <!-- menus -->
    <string name="menu_copyright">Copyright</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="message_no_topics">Could not get any topic data</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="label_main">Koala Topics</string>
    <string name="label_topic_list">Topic List</string>
    <string name="label_koala_topics">Koala Topics</string>
    <string name="label_topics">Topics</string>
    <string name="label_topic_edit">Edit Topic</string>
    <string name="label_topic_add">Add Topic</string>
    <string name="label_topic_details">Topic Details</string>
    <string name="label_user">User</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_reset_password">Reset Password</string>
    <string name="title_copyright_statement">Copyright Statement</string>
    <string name="title_about_this_app">About This App</string>

</resources>
